# waveshare-2.9b-v3-doc

./: .gitignore  CMakeLists.txt  Makefile  workspace.code-workspace
images/: test_screens.xcf
main/: CMakeLists.txt  main.c  main.h
main/font/: dejaVu_sans_mono_12.c  dejaVu_sans_mono_16.c  dejaVu_sans_mono_48.c  font.h
main/fonts/: aclonica_regular_48.c  custom_font.c  custom_fonts.h  dejaVu_sans_mono_12.c  dejaVu_sans_mono_16.c  dejaVu_sans_mono_48.c
main/gui/: gui_paint.c  gui_paint.h
main/icon/: icon.h  wifi_icon.c
main/luts/: luts.c  luts.h
main/temp/: GUI_Paint.c  edp_2in9_v2.c  edp_2in9_v2.h
main/test_screens/: test_screens.c  test_screens.h
main/utility/: edp_2in9b_v3.c  edp_2in9b_v3.h
