idf_component_register(SRCS "main.c"
                    "font/dejaVu_sans_mono_48.c"
                    "font/dejaVu_sans_mono_16.c"
                    "font/dejaVu_sans_mono_12.c"
                    "icon/wifi_icon.c"
                    "gui/gui_paint.c"
                    "utility/edp_2in9b_v3.c"
                    "luts/luts.c"
                    INCLUDE_DIRS "."
                    )